# Quant

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-30-quant-factor-research-plan2a-backtest-validate.md  2026-05-30-quant-factor-research-plan2b-factors-web.md  2026-05-31-quant-selector-reports-batch.md  (+1 more)
quant/: __init__.py  cli.py  config.py
quant/backtest/: engine.py  metrics.py
quant/cache/: store.py
quant/combine/: synth.py
quant/data/: holdout.py  panel.py  returns.py  sectors.py  universe.py
quant/eval/: ic.py  quantiles.py
quant/factor/: base.py  registry.py
quant/process/: neutralize.py  pipeline.py
quant/report/: backtest_card.py  leaderboard.py  runner.py  scorecard.py
quant/select/: screen.py
quant/validate/: dsr.py  gate.py  ledger.py  walkforward.py
quant/web/: _shared.py  app.py  viewmodel.py
tests/: conftest.py  test_backtest.py  test_backtest_card.py  test_cache.py  test_cli.py  test_cli_backtest.py  test_cli_combine.py  test_cli_extra.py  test_cli_holdout.py  test_cli_testall.py  test_combine.py  test_config.py  test_dsr.py  test_factor.py  test_factor_extra.py  test_gate.py  test_holdout.py  test_ic.py  test_leaderboard.py  test_ledger.py  test_metrics.py  test_neutralize.py  test_panel.py  test_portfolio.py  test_process.py  test_quantiles.py  test_registry.py  test_returns.py  test_runner.py  test_scorecard.py  test_screen.py  test_sectors.py  test_simple_returns.py  test_smoke.py  test_universe.py  test_viewmodel.py  test_viewmodel_selector.py  test_walkforward.py  test_web_shared.py
(+9 files in other folders)
